[project]
name = "healthaibot"
dynamic = ["version"]
description = "AI based Health Chat Assistant"
authors = [
    {name = "Sreeni1204",email = "hvsreenivasa93@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10, <4"
dependencies = [
    "langchain (>=0.3.27)",
    "langchain-openai (>=0.3.33)",
    "langgraph (>=0.6.7)",
    "langchainhub (>=0.1.21)",
    "tavily-python (>=0.7.12)",
    "langchain-community (>=0.3.29)",
    "python-dotenv (>=1.1.1)",
    "langchain-ollama (>=0.3.8)",
    "langchain-tavily (>=0.2.11)"
]

[tool.poetry]
packages = [{include = "healthaibot"}]
version = "0.1.0-dev"

[tool.poetry.scripts]
healthaibot = "healthaibot.cli:main"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
poetry-plugin-bundle = { version = ">=1.7.0,<=2.0.0" }

[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefexied"
bump = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
langchain-openai = "*"
